Restructured codebase to be cleaner; in Blog.jsx and Gallery.jsx, creating new blogs and posts flipped the order from oldest to most recent; fixed using spread syntax and array shifting

--- a/src/components/Navigation/Dashboard.css
+++ b/src/components/Navigation/Dashboard.css
@@ -1,7 +1,8 @@
 body {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../assets/default-background.jpg');
   background-size: cover;
-  background-image: url('../../assets/default-background.jpeg');
   background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .dashboard {
